--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,7 +37,7 @@ android {
 
 repositories {
   maven {
-      url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
+      url "https://github.com/vector-im/jitsi_libre_maven/raw/main/android-sdk-3.1.0"
   }
   google()
   mavenCentral()
